<resources>
    <string name="app_name">Fill Ram Memory</string>
    <string name="tab_dump">Dump memory</string>
    <string name="tab_speed_up">Speed up</string>
    <string name="str_fill_mem">Fill Ram</string>
    <string name="str_ram_usage">Ram usage</string>
    <string name="str_total">Total</string>
    <string name="str_available">Available</string>
    <string name="str_used_title">App Used</string>
    <string name="str_created">Created</string>
    <string name="str_custom">Custom</string>
    <string name="str_system_chart_desc">(Available per Total)</string>
    <string name="str_pick_value">Pick a value below to fill Ram</string>
    <string name="str_app_chart_desc">(Created per Total)</string>
    <string name="str_unit_mb">MB</string>
    <string name="str_unit_gb">GB</string>
    <string name="str_input_placeholder">Enter size and select unit</string>
    <string name="str_accept">Accept</string>
    <string name="str_free_mem">Free Now</string>
    <string name="str_free_vars_success">Free all allocated variables successfully</string>
    <string-array name="spinner_unit_value">
        <item>KB</item>
        <item>MB</item>
        <item>GB</item>
    </string-array>

    <string name="str_free_allocation">Free</string>
    <string name="str_stop_service">Stop</string>
    <string name="str_noti_title">Running</string>
    <string name="str_noti_content">Holding allocated variables…</string>
    <string name="str_mem_usage_title">App RAM usage</string>
    <string name="str_last_used">Last used</string>
    <string name="str_recent_use">Recent apps used</string>
    <string name="str_no_app">No app found!</string>
    <string name="str_apps">apps</string>
    <string name="str_used">Used</string>
    <string name="str_speed_up">Speed up</string>
    <string name="str_permission_explain">App needs <span style="color:blue; font-weight:bold">Usage data access</span> permission to help you manage running apps.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Custom value</string>
    <string name="value">Value:</string>
    <string name="units">Unit:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Accept</string>
    <string name="subTitle">Enter a value and then select corresponding unit</string>
</resources>