<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    android:background="@drawable/gradient_background">
    <RelativeLayout
        android:id="@+id/percentageHolder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="@dimen/normal_space">
        <TextView
            android:id="@+id/percentageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:fontFamily="@font/opensans_semibold"
            android:textSize="@dimen/extra_large_text"
            android:layout_centerInParent="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/percentageText"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/colorAthensGray"
                android:textSize="@dimen/medium_text"
                android:text="%"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/colorAthensGray"
                android:textSize="@dimen/normal_text"
                android:text="@string/str_used"/>
        </LinearLayout>

        <TextView
            android:id="@+id/btnSpeedUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/normal_space"
            android:paddingVertical="@dimen/small_space"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/white_round_corner_background"
            android:fontFamily="@font/opensans_semibold"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/colorBlue"
            android:text="@string/str_speed_up" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/normal_space"
            android:gravity="center_vertical"
            android:background="@color/colorGrayLight">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_recent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textSize="@dimen/small_text"
                android:textColor="@color/colorGrayText"
                android:text="@string/str_recent_use"
                android:layout_marginStart="@dimen/small_space"
                android:layout_weight="1"/>
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listUsageApps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:visibility="gone"
                    android:id="@+id/emptyItemHolder">
                    <ImageView
                        android:layout_width="@dimen/img_size_normal"
                        android:layout_height="@dimen/img_size_normal"
                        android:src="@drawable/ic_android"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_light"
                        android:text="@string/str_no_app"
                        android:textColor="@color/colorGrayText"
                        android:textSize="@dimen/normal_text"
                        android:layout_marginTop="@dimen/medium_space"/>
                </LinearLayout>
            </FrameLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</LinearLayout>
