<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.MainActivity">

    <TextView
        android:id="@+id/totalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/str_total"
        android:textSize="@dimen/normal_text"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="@dimen/normal_text"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalTitle"
        app:layout_constraintStart_toEndOf="@+id/totalTitle" />

    <TextView
        android:id="@+id/usedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:text="@string/str_used"
        android:textSize="@dimen/normal_text"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/usedValue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:textSize="@dimen/normal_text"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/usedTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/freeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/str_available"
        android:textSize="@dimen/normal_text"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/totalTitle"
        app:layout_constraintTop_toBottomOf="@+id/totalTitle" />

    <TextView
        android:id="@+id/freeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="@dimen/normal_text"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/freeTitle"
        app:layout_constraintTop_toTopOf="@+id/freeTitle" />

    <RelativeLayout
        android:id="@+id/progressWrapper"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" >
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:progressDrawable="@drawable/custom_progress_bar"
            android:indeterminate="false"
            android:max="100"
            android:secondaryProgress="0" />
        <TextView
            android:id="@+id/progressPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/normal_text"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:text="+100MB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressWrapper" />

    <Button
        android:id="@+id/btn200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="+200MB"
        app:layout_constraintEnd_toStartOf="@+id/btn400"
        app:layout_constraintStart_toEndOf="@+id/btn100"
        app:layout_constraintTop_toTopOf="@+id/btn100" />

    <Button
        android:id="@+id/btn400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="+400MB"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn200"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="+500MB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn100" />

    <Button
        android:id="@+id/btn700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="+700MB"
        app:layout_constraintEnd_toStartOf="@+id/btn1"
        app:layout_constraintStart_toEndOf="@+id/btn500"
        app:layout_constraintTop_toBottomOf="@+id/btn200" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="+1GB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn400" />

    <Button
        android:id="@+id/btnCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/str_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn700" />


</androidx.constraintlayout.widget.ConstraintLayout>