<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
<!--    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_space"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/opensans_semibold"
        android:textColor="@android:color/white"
        android:textSize="@dimen/normal_text"
        android:text="@string/tab_system"/>-->
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_space"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginHorizontal="@dimen/normal_space">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/totalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/str_total"
                android:textSize="@dimen/normal_text"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/totalValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/opensans_regular"
                android:textSize="@dimen/normal_text"
                android:textColor="@android:color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="end"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/usedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/str_used"
                android:textSize="@dimen/normal_text"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/usedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/opensans_regular"
                android:textSize="@dimen/normal_text"
                android:textColor="@android:color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/normal_space">
            <TextView
                android:id="@+id/availableTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/str_available"
                android:textSize="@dimen/normal_text"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/availableValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/opensans_regular"
                android:textSize="@dimen/normal_text"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </GridLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_space"/>

    <RelativeLayout
        android:id="@+id/progressWrapper"
        android:layout_width="@dimen/huge_space"
        android:layout_height="@dimen/huge_space"
        android:layout_gravity="center">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:progressDrawable="@drawable/custom_progress_bar"
            android:indeterminate="false"
            android:max="100"
            android:secondaryProgress="0" />
        <TextView
            android:id="@+id/progressPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/opensans_semibold"
            android:text="0%"
            android:textSize="@dimen/medium_text"
            android:textColor="@android:color/black" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_system_chart_desc"
        android:fontFamily="@font/opensans_light"
        android:textSize="@dimen/small_text"
        android:textColor="@android:color/black" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_space"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_marginHorizontal="@dimen/normal_space">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn100"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/opensans_regular"
                android:text="+100MB" />
            <Space
                android:layout_width="@dimen/normal_space"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/btn200"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/opensans_regular"
                android:text="+200MB" />
            <Space
                android:layout_width="@dimen/normal_space"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/btn400"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/opensans_regular"
                android:text="+400MB" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_space"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn500"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/opensans_regular"
                android:text="+500MB" />
            <Space
                android:layout_width="@dimen/normal_space"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/btn700"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/opensans_regular"
                android:text="+700MB" />
            <Space
                android:layout_width="@dimen/normal_space"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/opensans_regular"
                android:text="+1GB" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_space"/>
        <Button
            android:id="@+id/btnCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/str_custom" />
    </GridLayout>
</LinearLayout>
